--- a/ParseStarterProject/src/main/res/values/strings.xml
+++ b/ParseStarterProject/src/main/res/values/strings.xml
@@ -11,7 +11,7 @@
     <string name="parse_app_id">YOUR_APPLICATION_ID</string>
     <string name="parse_client_key">YOUR_CLIENT_KEY</string>
 
-    <string name="app_name">Parse Starter Project</string>
+    <string name="app_name">Flingos</string>
 
     <string name="hello_world">Hello World!</string>
     <string name="action_settings">Settings</string>
@@ -36,4 +36,7 @@
     <string name="registered_emailid">Please enter your Registered Email Id below:</string>
     <string name="submit">SUBMIT</string>
     <string name="back">BACK</string>
+
+    <string name="mail_error_toast">\nYour Email-id is Invalid. Please enter a valid Email-id and try again. \n</string>
+    <string name="pass_error_toast">Your Password should contain 6 to 20 characters string with at least one digit, one upper case letter, one lower case letter and one special symbol (“@#$%”)</string>
 </resources>
