--- a/ParseStarterProject/src/main/res/values/strings.xml
+++ b/ParseStarterProject/src/main/res/values/strings.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
   ~ Copyright (c) 2015-present, Parse, LLC.
   ~ All rights reserved.
   ~
@@ -11,13 +10,14 @@
     <string name="parse_app_id">YOUR_APPLICATION_ID</string>
     <string name="parse_client_key">YOUR_CLIENT_KEY</string>
 
-    <string name="app_name">Flingos</string>
+    <string name="app_name">Flingos!</string>
 
     <string name="hello_world">Hello World!</string>
     <string name="action_settings">Settings</string>
+    <string name="action_logout">Logout</string>
 
 
-   //login
+    //login
     <string name="email">Email Id</string>
     <string name="password">Password</string>
     <string name="login">LOGIN</string>
@@ -39,4 +39,6 @@
 
     <string name="mail_error_toast">\nYour Email-id is Invalid. Please enter a valid Email-id and try again. \n</string>
     <string name="pass_error_toast">Your Password should contain 6 to 20 characters string with at least one digit, one upper case letter, one lower case letter and one special symbol (“@#$%”)</string>
+    <string name="title_activity_welcome">WelcomeActivity</string>
+    <string name="section_format">Hello World from section: %1$d</string>
 </resources>
