--- a/ParseStarterProject/src/main/res/values/strings.xml
+++ b/ParseStarterProject/src/main/res/values/strings.xml
@@ -41,4 +41,7 @@
     <string name="pass_error_toast">Your Password should contain 6 to 20 characters string with at least one digit, one upper case letter, one lower case letter and one special symbol (“@#$%”)</string>
     <string name="title_activity_welcome">WelcomeActivity</string>
     <string name="section_format">I Am section: %1$d</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
